--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,16 @@
-page-home {
+page-locations {
 
+   #map {
+        height: 30%;
+        width: 95%;
+        margin: 2.5%;
+    }
 }
+
+
+ion-app.gmapscdv_ .nav-decor,
+._gmaps_cdv_,
+.nav-decor{
+  	background-color: rgba(0, 0, 0, 0) !important;
+}
+
